loopfor.LoopCourseForest.scala.error
Compilation error:
LoopCourseForest:3: error: '(' expected but identifier found.
                   if ok =="g" {
                      ^LoopCourseForest:11: error: illegal start of simple expression
                   } 
                   ^